--- a/navbaar/nav.html
+++ b/navbaar/nav.html
@@ -13,7 +13,7 @@
     <title>wepage</title>
 </head>
 
-<body style="background-color: paleturquoise;">
+<body style="background-color: rgb(5, 77, 99);">
     <nav>
         <!-- <div class="nav-bar">
             <i class='bx bx-menu sidebarOpen'></i>
@@ -27,7 +27,7 @@
                 
         <ul class="nav-links">
             <div class="logo">
-            <img src="https://t3.ftcdn.net/jpg/05/77/20/74/360_F_577207418_P0Encjx9fMSDffn9MlIh1Ir0piJJwfkZ.jpg" alt="Logo">
+            <img src="https://cdn.vectorstock.com/i/1000v/00/73/linear-bouquet-wildflowers-in-vase-engraving-vector-42050073.avif" alt="Logo">
         </div>
             <li><a href="./nav.html">Home</a></li>
             <li><a href="./collection.html">Collection</a></li>
