--- a/navbaar/sign.html
+++ b/navbaar/sign.html
@@ -13,6 +13,9 @@
 <body>
     <nav>
         <ul class="nav-links">
+            <div class="logo">
+                <img style="margin-left: 40px;"          src="https://cdn.vectorstock.com/i/1000v/00/73/linear-bouquet-wildflowers-in-vase-engraving-vector-42050073.avif" alt="Logo">
+            </div>
             <li><a href="./nav.html">Home</a></li>
             <li><a href="./collection.html">Collection</a></li>
             <li><a href="./about.html">About</a></li>
