--- a/navbaar/about.html
+++ b/navbaar/about.html
@@ -11,6 +11,9 @@
 <body>
     <nav>
         <ul class="nav-links"></ul>
+        <div class="logo"></div>
+            <img src="https://t3.ftcdn.net/jpg/05/77/20/74/360_F_577207418_P0Encjx9fMSDffn9MlIh1Ir0piJJwfkZ.jpg" alt="Logo">
+        </div>
         <li><a href="./nav.html">Home</a></li>
         <li><a href="./collection.html">Collection</a></li>
         <li><a href="./about.html">About</a></li>
