--- a/navbaar/nav.html
+++ b/navbaar/nav.html
@@ -13,7 +13,7 @@
     <title>wepage</title>
 </head>
 
-<body style="background-color: rgb(5, 77, 99);">
+<body style="background-color: teal">
     <nav>
         <!-- <div class="nav-bar">
             <i class='bx bx-menu sidebarOpen'></i>
