--- a/navbaar/about.html
+++ b/navbaar/about.html
@@ -10,20 +10,23 @@
 
 <body>
     <nav>
-        <ul class="nav-links"></ul>
-        <div class="logo"></div>
-            <img src="https://t3.ftcdn.net/jpg/05/77/20/74/360_F_577207418_P0Encjx9fMSDffn9MlIh1Ir0piJJwfkZ.jpg" alt="Logo">
-        </div>
-        <li><a href="./nav.html">Home</a></li>
-        <li><a href="./collection.html">Collection</a></li>
-        <li><a href="./about.html">About</a></li>
-        <li><a href="./sign.html">Contact</a></li>
+        <ul class="nav-links">
+            <div class="logo">
+                <img src="https://t3.ftcdn.net/jpg/05/77/20/74/360_F_577207418_P0Encjx9fMSDffn9MlIh1Ir0piJJwfkZ.jpg"
+                    alt="Logo">
+            </div>
+            <li><a href="./nav.html">Home</a></li>
+            <li><a href="./collection.html">Explore</a></li>
+            <li><a href="./about.html">About</a></li>
+            <li><a href="./sign.html">Contact</a></li>
         </ul>
     </nav>
     <hr>
-    <h1>About Us</h1>
-     <!-- ==================footer======================== -->
-     <footer>
+    <center>
+        <h1>About Us</h1>
+    </center>
+    <!-- ==================footer======================== -->
+    <footer>
         <div class="foot-panel1">
         </div>
 
@@ -72,7 +75,7 @@
             </div>
         </div>
     </footer>
-</div>
+    </div>
 </body>
 
 </html>
