--- a/navbaar/sign.html
+++ b/navbaar/sign.html
@@ -17,7 +17,7 @@
                 <img style="margin-left: 40px;"          src="https://cdn.vectorstock.com/i/1000v/00/73/linear-bouquet-wildflowers-in-vase-engraving-vector-42050073.avif" alt="Logo">
             </div>
             <li><a href="./nav.html">Home</a></li>
-            <li><a href="./collection.html">Collection</a></li>
+            <li><a href="./collection.html">Explore</a></li>
             <li><a href="./about.html">About</a></li>
             <li><a href="./sign.html">Contact</a></li>
         </ul>
