--- a/navbaar/nav.html
+++ b/navbaar/nav.html
@@ -30,11 +30,12 @@
             <img src="https://cdn.vectorstock.com/i/1000v/00/73/linear-bouquet-wildflowers-in-vase-engraving-vector-42050073.avif" alt="Logo">
         </div>
             <li><a href="./nav.html">Home</a></li>
-            <li><a href="./collection.html">Collection</a></li>
+            <li><a href="./collection.html">Explore</a></li>
             <li><a href="./about.html">About</a></li>
             <li><a href="./sign.html">Contact</a></li>
         </ul>
     </nav>
+    <hr>
     <marquee behaviour="scroll" direction="right" scrollamount="15">
         <h2 style="color: white;">Exiciting offers upto 50% off on sale</h2>
     </marquee>
