--- a/navbaar/nav.html
+++ b/navbaar/nav.html
@@ -15,20 +15,11 @@
 
 <body style="background-color: teal">
     <nav>
-        <!-- <div class="nav-bar">
-            <i class='bx bx-menu sidebarOpen'></i>
-            <span class="logo navLogo"><a href="#">Dream Decor</a></span>
-            <div class="menu">
-                 <div class="logo-toggle">
-                    <span class="logo"><a href="#">Dream Decor</a></span>
-                    <i class='bx bx-x siderbarClose'></i>
-                </div>  -->
-
-                
         <ul class="nav-links">
             <div class="logo">
-            <img src="https://cdn.vectorstock.com/i/1000v/00/73/linear-bouquet-wildflowers-in-vase-engraving-vector-42050073.avif" alt="Logo">
-        </div>
+                <img src="https://cdn.vectorstock.com/i/1000v/00/73/linear-bouquet-wildflowers-in-vase-engraving-vector-42050073.avif"
+                    alt="Logo">
+            </div>
             <li><a href="./nav.html">Home</a></li>
             <li><a href="./collection.html">Explore</a></li>
             <li><a href="./about.html">About</a></li>
