--- a/navbaar/nav.html
+++ b/navbaar/nav.html
@@ -26,13 +26,16 @@
             <li><a href="./sign.html">Contact</a></li>
         </ul>
     </nav>
-    <hr>
     <marquee behaviour="scroll" direction="right" scrollamount="15">
         <h2 style="color: white;">Exiciting offers upto 50% off on sale</h2>
     </marquee>
     <marquee behaviour="scroll" direction="left" scrollamount="15">
         <h2 style="color: white;">Exiciting offers upto 50% off on sale</h2>
     </marquee>
+
+    <div>
+        <img                src="../IMG/decor7.jpeg">
+    </div>
 
     <div class="divv">
         <div style="display: flex; gap: 30px;">
