--- a/navbaar/nav.html
+++ b/navbaar/nav.html
@@ -34,7 +34,7 @@
     </marquee>
 
     <div>
-        <img                src="../IMG/decor7.jpeg">
+        <img  style="width:90%; height: 600px; margin-left: 50px;"             src="../IMG/decor7.jpeg">
     </div>
 
     <div class="divv">
