--- a/navbaar/nav.html
+++ b/navbaar/nav.html
@@ -34,7 +34,8 @@
     </marquee>
 
     <div>
-        <img  style="width:90%; height: 600px; margin-left: 50px;"             src="../IMG/decor7.jpeg">
+        <img  style="width:90%; height: 600px; margin-left: 50px; background-size: cover;"           
+          src="https://img.freepik.com/premium-photo/colorful-glasses-books-flowers-glass-vase-blue-background_979520-60410.jpg">
     </div>
 
     <div class="divv">
